--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: "UNSTRUCTURED | STRUCTURED"
 email:
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://johnhadaway.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username: 
 
