--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: "UNSTRUCTURED | STRUCTURED"
 email:
-description: >- # this means to ignore newlines until "baseurl:"
+description: "TBD"
 baseurl: "/unstructured-structured" # the subpath of your site, e.g. /blog
 url: "http://johnhadaway.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
