--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: "UNSTRUCTURED | STRUCTURED"
+title: "STRUCTURED | UNSTRUCTURED"
 email:
 description: "TBD"
-baseurl: "/unstructured-structured" # the subpath of your site, e.g. /blog
+baseurl: "/structured-unstructured" # the subpath of your site, e.g. /blog
 url: "http://johnhadaway.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 
 github_username: 
